Bug 748726 - Received messages contain parts of other messages with movemail account. r=Standard8